bomb lauch and new created name laal

--- a/Sindoor.html
+++ b/Sindoor.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="Sindoor.css">
-</head>
-<body>
+    <link rel="stylesheet" href="Sindoor.css" />
+  </head>
+  <body>
     <h1 class="Sindoor">Sindoor</h1>
-    <p class="para">Sindoor is a traditional red or orange-red cosmetic powder used by married Hindu</p>
-    <h3 class="hallabol">Tum sab ke sab maroge dobara india pe ankh uthake dekha to</h3>
-</body>
+    <p class="para">
+      Sindoor is a traditional red or orange-red cosmetic powder used by married
+      Hindu
+    </p>
+    <h3 class="hallabol">
+      Tum sab ke sab maroge dobara india pe ankh uthake dekha to
+    </h3>
+    <h3>bomb launch</h3>
+  </body>
 </html>
